feat(config,core): add advanced 2x2 tree support and enhanced log detection
- Introduced new configuration option for large tree handling
- Added comprehensive 2x2 tree detection and replanting for jungle, dark oak, and spruce trees
- Enhanced TreeDetectionService to handle complex tree trunk patterns
- Implemented more robust log detection with diagonal and multi-level searching
- Updated ReplantingService to handle 2x2 sapling placement with dropped sapling reuse
- Added ConfigKeys utility class for centralized configuration management
- Bumped version to 1.2.0 to reflect significant feature enhancements